# kaspa-safe

./: README.md  RECOVERY-SHA256SUMS
board-indexer/: Cargo.toml  KBRD-SPEC.md  LICENSE  PUBLIC-BOUNDARY.md  README.md  public-files.txt
board-indexer/src/: api.rs  envelope.rs  indexer.rs  lib.rs  main.rs  node.rs  store.rs
recovery-kit/: Cargo.toml  EXPECTED-FILES.txt  RECOVERY-SHA256SUMS
vaultctl/: Cargo.toml
web/: recover.html  security.html  sitemap-forge.xml
web/assets/: sec-status.json
web/ru/: recover.html  security.html
