[package]
name = "kbrd-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone, infrastructure-neutral indexer for signed KBRD board posts on Kaspa"
repository = "https://github.com/Kaspaforge/kaspaforge"

[features]
default = ["node"]
node = ["dep:kaspa-grpc-client", "dep:kaspa-rpc-core"]

[dependencies]
anyhow = "1"
axum = "0.7"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
secp256k1 = { version = "0.29", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1", optional = true }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1", optional = true }

[dev-dependencies]
tempfile = "3"
