[package]
name = "vaultctl"
version = "0.1.0"
edition = "2021"

[dependencies]
silverscript-lang = { git = "https://github.com/kaspanet/silverscript", rev = "26e3b9f94821b6fe47a2492755252ec4f995abb1" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.5"
hex = "0.4"
serde_json = "1"
age = { version = "0.10", default-features = false, features = ["armor"] }
rpassword = "7"

kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }

# recovery tool: catch overflow in release with a panic instead of a silent wrap → wrong output amount
# (dust vault with amount<FEE etc.); an explicit failure beats a silently broken transaction (audit L-2)
[profile.release]
overflow-checks = true

[workspace]
